--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -16,48 +16,47 @@
 
   <link rel="manifest" href="/manifest.json"/>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%#= stylesheet_link_tag request.protocol + request.host + (ENV['IS_DOCKER'] == 'true' ? "/bot/css/embed.css" : ":3030/css/embed.css"), 'data-turbolinks-track': 'reload' %>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Cabin:400,500,600,700|Roboto:300,400,700|Material+Icons|Material+Icons+Round|Material+Icons+Sharp">
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Montserrat:800,900|Roboto:400,500,700|Material+Icons|Material+Icons+Round|Material+Icons+Sharp">
+
   <%= Gon::Base.render_data %>
-  <%#= javascript_include_tag request.protocol + request.host + (ENV['IS_DOCKER'] == 'true' ? "/bot/embed.js" : ":3030/embed.js"), defer: true %>
-<!--  <script src='https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.min.js' data-turbolinks-track='reload'></script>-->
-<!--  <script src='https://cdn.rawgit.com/showdownjs/showdown/1.7.4/dist/showdown.min.js' data-turbolinks-track='reload'></script>-->
+
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
-  <%#= javascript_include_tag 'bot/client', 'data-turbolinks-track': 'reload' %>
+
 </head>
 <body>
 <!--<div class="mdc-drawer-app-content">-->
-  <div style="height: 64px; width: 100%"></div>
-  <% if params['controller'] == 'devise/sessions' || current_page?(controller: 'feeds', action: 'index') %>
-    <%= render partial: "layouts/app-top-bar" %>
-    <%= render partial: 'layouts/hero' unless current_user %>
-    <section class="me-page me-page--feed-section">
-      <div class="me-overlay"></div>
-      <%#= render partial: 'layouts/bot' %>
-      <%= yield %>
-    </section>
-  <% elsif params['controller'] == 'events' && params['action'] == 'show' %>
-    <%= render partial: "layouts/app-top-bar", locals: {controller: 'events'} %>
-    <section class="me-page--events-section">
-      <div class="me-overlay"></div>
-      <%= yield %>
-    </section>
-  <% elsif params['controller'] == 'feeds' && params['action'] == 'train' %>
-    <%= render partial: "layouts/app-top-bar" %>
-    <section class="me-page--train-section">
-      <%#= render partial: 'layouts/bot' %>
-      <div class="me-overlay"></div>
-      <%= yield %>
-    </section>
-  <% else %>
-    <%= render partial: "layouts/app-top-bar" %>
-    <section class="me-page--feed-section">
-      <%#= render partial: 'layouts/bot' %>
-      <div class="me-overlay"></div>
-      <%= yield %>
-    </section>
-  <% end %>
+<div style="height: 64px; width: 100%"></div>
+<% if params['controller'] == 'devise/sessions' || current_page?(controller: 'feeds', action: 'index') %>
+  <%= render partial: "layouts/app-top-bar" %>
+  <%= render partial: 'layouts/hero' unless current_user %>
+  <section class="me-page me-page--feed-section">
+    <div class="me-overlay"></div>
+    <%#= render partial: 'layouts/bot' %>
+    <%= yield %>
+  </section>
+<% elsif params['controller'] == 'events' && params['action'] == 'show' %>
+  <%= render partial: "layouts/app-top-bar", locals: {controller: 'events'} %>
+  <section class="me-page--events-section">
+    <div class="me-overlay"></div>
+    <%= yield %>
+  </section>
+<% elsif params['controller'] == 'feeds' && params['action'] == 'train' %>
+  <%= render partial: "layouts/app-top-bar" %>
+  <section class="me-page--train-section">
+    <%#= render partial: 'layouts/bot' %>
+    <div class="me-overlay"></div>
+    <%= yield %>
+  </section>
+<% else %>
+  <%= render partial: "layouts/app-top-bar" %>
+  <section class="me-page--feed-section">
+    <%#= render partial: 'layouts/bot' %>
+    <div class="me-overlay"></div>
+    <%= yield %>
+  </section>
+<% end %>
 <!--</div>-->
 <% if notice %>
   <div data-controller="snackbar" class="me-snackbar mdc-snackbar">
