--- a/web/app/views/layouts/welcome.html.erb
+++ b/web/app/views/layouts/welcome.html.erb
@@ -51,7 +51,7 @@
   </div>
 <% end %>
 
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Cabin:400,500,600,700">
+<link href="https://fonts.googleapis.com/css?family=Montserrat:800,900|Roboto:400,500,700&display=swap" rel="stylesheet">
 <%= javascript_include_tag 'welcome/application.js', defer: true %>
 <script src="https://apis.google.com/js/api:client.js?onload=init" defer></script>
 <script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=5d2f4bbe364d580011c349e5&product=inline-share-buttons' async='async'></script>
