--- a/web/app/assets/stylesheets/welcome/application.scss
+++ b/web/app/assets/stylesheets/welcome/application.scss
@@ -37,20 +37,25 @@
   }
 
   &__beta-explanation {
-    width: 259px;
-    height: 137px;
-    background-image: asset_url('welcome/beta-explanation.png');
-    background-repeat: no-repeat;
-    background-position: center top;
-    position: absolute;
-    right: -180px;
-    top: 95px;
-    background-size: 85%;
+    text-align: center;
+    margin: 15px 0 0 0;
+    font-weight: normal;
+    color: #7D7D7D;
+    font-size: 12px;
+    //width: 259px;
+    //height: 137px;
+    //background-image: asset_url('welcome/beta-explanation.png');
+    //background-repeat: no-repeat;
+    //background-position: center top;
+    //position: absolute;
+    //right: -180px;
+    //top: 95px;
+    //background-size: 85%;
   }
 }
 
 .invite {
-  margin: 190px auto 0 auto;
+  margin: 250px auto 0 auto;
   position: relative;
   overflow: hidden;
   width: 100%;
@@ -61,7 +66,7 @@
   user-select: none;
   @include mobile-only {
     margin: 100px auto 0 auto;
-    padding-bottom: 120px;
+    padding-bottom: 60px;
   }
 
   &__status {
@@ -84,15 +89,15 @@
 
   &__counter {
     font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 29px;
+    font-weight: 500;
+    font-size: 23px;
+    line-height: 27px;
     margin: 20px 0 0 0;
     text-align: center;
     @include mobile-only {
       font-size: 18px;
       line-height: 21px;
-      padding: 0 25px;
+      padding: 0 45px;
     }
   }
 
@@ -100,33 +105,33 @@
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
-    line-height: 22px;
+    line-height: 21px;
     color: rgba(12, 15, 9, 0.7);
-    margin: 16px 0 0 0;
+    margin: 12px 0 0 0;
     text-align: center;
     transition: opacity 0.4s ease;
     @include mobile-only {
       font-size: 14px;
       line-height: 16px;
       margin: 6px 0 0 0;
-      padding: 0 30px;
+      padding: 0 50px;
     }
   }
 
   &__cta {
-    width: 292px;
-    height: 70px;
+    width: 366px;
+    height: 87px;
+    font-family: $font-primary-font;
     font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 28px;
+    font-weight: 900;
+    font-size: 28px;
+    line-height: 34px;
     display: flex;
     align-items: center;
     text-align: center;
     text-transform: uppercase;
-    color: #FFFFFF;
+    color: $brand-color-left;
     justify-content: center;
-    background: linear-gradient(90deg, $brand-shadow-color-left 0.04%, $brand-color-left 99.96%);
     box-shadow: 0 0 45px rgba(0, 0, 0, 0.25);
     border-radius: 60px;
     margin: 85px auto 0 auto;
@@ -136,6 +141,7 @@
       width: 195px;
       height: 50px;
       font-size: 14px;
+      margin: 35px auto 0 auto;
     }
 
     &:hover {
@@ -161,7 +167,7 @@
   &__google-details {
     text-align: center;
     margin: 10px auto 0 auto;
-    width: 381px;
+    width: 406px;
     height: 35px;
     background-image: asset_url("welcome/google-details.png");
     background-repeat: no-repeat;
@@ -187,8 +193,8 @@
   & .people {
     margin: auto;
     position: relative;
-    width: 375px;
-    height: 70px;
+    width: 328px;
+    height: 55px;
     z-index: 2;
     @include mobile-only {
       width: 220px;
@@ -196,9 +202,9 @@
     }
 
     &__person-face {
-      width: 60px;
-      height: 60px;
-      border: 1px solid #FFFFFF;
+      width: 50px;
+      height: 50px;
+      border: 3px solid #FFFFFF;
       border-radius: 100%;
       position: absolute;
       left: 0;
@@ -230,6 +236,7 @@
     background-image: asset_url('welcome/bg-footer-mobile.jpg');
     background-repeat: no-repeat;
     background-position: bottom center;
+    height: auto;
   }
 
   & h2 {
@@ -258,8 +265,8 @@
     height: 275px;
     top: 0;
     margin: 95px auto 0 auto;
-    grid-row-gap: 15px;
-    grid-column-gap: 15px;
+    grid-row-gap: 25px;
+    grid-column-gap: 20px;
     grid-template-columns: 20% 20% 20% 20% 20%;
     grid-template-areas: "q1 q1 q2 q2 q2" "q3 q3 q3 q3 q3" "q4 q4 q4 q5 q5";
     position: relative;
@@ -281,14 +288,22 @@
     font-weight: bold;
     font-size: 18px;
     line-height: 22px;
-    color: #166dbf;
+    color: $brand-color-left;
     cursor: pointer;
     width: 100%;
     height: 100%;
     transition: transform 0.4s ease;
 
+    h3 {
+      font-family: $font-primary-font;
+    }
+
     &:hover {
-      transform: scale(0.9);
+      //transform: scale(0.9);
+      background: $brand-color-left;
+      & h3 {
+        color: #ffffff;
+      }
     }
 
     &.is-open {
@@ -297,27 +312,27 @@
 
     &--q1 {
       grid-area: q1;
-      background: #E4F2FB;
+      background: #F2F2F2;
     }
 
     &--q2 {
       grid-area: q2;
-      background: #E4F2FB;
+      background: #F2F2F2;
     }
 
     &--q3 {
       grid-area: q3;
-      background: #E4F2FB;
+      background: #F2F2F2;
     }
 
     &--q4 {
       grid-area: q4;
-      background: #E4F2FB;
+      background: #F2F2F2;
     }
 
     &--q5 {
       grid-area: q5;
-      background: #E4F2FB;
+      background: #F2F2F2;
     }
   }
 }
@@ -398,6 +413,8 @@
   margin-top: 185px;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
 
   &__logo-icon {
     position: relative;
