--- a/web/app/assets/stylesheets/welcome/fcp.scss
+++ b/web/app/assets/stylesheets/welcome/fcp.scss
@@ -2,7 +2,7 @@
 @import "variables";
 
 .template__container {
-  font-family: Cabin, sans-serif;
+  font-family: $font-secondary-font;
   color: #0C0F09;
   display: flex;
   flex-direction: column;
@@ -60,13 +60,15 @@ section {
 
 .headline {
   font-style: normal;
-  font-weight: bold;
   text-align: center;
   @include mobile-only {
     padding: 0 25px;
   }
 
   & h1 {
+    font-family: $font-primary-font;
+    letter-spacing: -0.02em;
+    font-weight: 800;
     font-size: 48px;
     line-height: 58px;
     margin: 0;
@@ -79,9 +81,10 @@ section {
   }
 
   & h2 {
-    font-weight: 100;
-    font-size: 24px;
-    line-height: 29px;
+    font-family: $font-secondary-font;
+    font-weight: normal;
+    font-size: 22px;
+    line-height: 26px;
     margin: 10px 0 0 0;
     max-width: 1080px;
     @include mobile-only {
@@ -116,8 +119,8 @@ section {
   background: #FFFFFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
   border-radius: 6px;
-  width: 220px;
-  height: 105px;
+  width: 226px;
+  height: 110px;
   padding: 12px 25px;
   font-style: normal;
   text-align: center;
