--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -9,13 +9,13 @@
 
   <section class="headline">
     <h1>Aproveite a cidade de Porto Alegre</h1>
-    <h2>Atividades de rua, meetups profissionais, os rolês que só avisam no dia, aquele filme no Mario Quintana...
-      Um feed para as pessoas que gostam de explorar coisas novas e de não perder o que já conhecem.</h2>
+    <h2>Atividades culturais, meetups, shows, rolês, feiras de rua, aquele filme no Mario Quintana...</br>
+      Um feed para quem quer explorar a cidade e não perder o que já conhece</h2>
   </section>
 
   <section class="features">
     <div class="features__scroll-view">
-      <div class="feature feature--activities rellax" data-rellax-speed="3" style="transform: <%= mobile_device? ? 'translate(150px, 0px)' : 'translate(-150px, 150px)' %> ; opacity: 0">
+      <div class="feature feature--activities rellax" data-rellax-speed="2" style="transform: <%= mobile_device? ? 'translate(150px, 0px)' : 'translate(-150px, 150px)' %> ; opacity: 0">
         <div class="feature__icon">
           <%= image_tag "welcome/bike-icon.png", alt: 'bicicleta' %>
         </div>
@@ -39,7 +39,7 @@
         </div>
         <div class="feature__title">Compartilhe com seus melhores amigos seus planos</div>
       </div>
-      <div class="feature feature--movie rellax" data-rellax-speed="3" style="transform: translate(150px, 150px); opacity: 0">
+      <div class="feature feature--movie rellax" data-rellax-speed="2" style="transform: translate(150px, 150px); opacity: 0">
         <div class="feature__icon">
           <%= image_tag "welcome/movie-icon.png", alt: "filme" %>
         </div>
@@ -50,11 +50,13 @@
 
   <% unless mobile_device? %>
     <section class="demo">
-      <div class="macbook rellax" data-rellax-speed="1">
+      <div class="macbook">
         <div class="macbook__screen">
-          <div class="macbook__beta-explanation"></div>
           <img data-src="<%= image_url 'welcome/demo-2.gif' %>" alt="demonstração" class="lazyload">
         </div>
+      </div>
+      <div class="macbook__beta-explanation">
+        Demonstração da versão beta
       </div>
     </section>
   <% end %>
@@ -161,20 +163,10 @@
 
     <section class="footer">
       <div class="footer__logo-icon js-logo">
-        <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 35 35" fill="none">
-          <path d="M17.5492 34.0853C26.6619 34.0853 34.0492 26.698 34.0492 17.5853C34.0492 8.47263 26.6619 1.08533 17.5492 1.08533C8.43649 1.08533 1.04919 8.47263 1.04919 17.5853C1.04919 26.698 8.43649 34.0853 17.5492 34.0853Z" fill="url(#paint0_linear)" class="smile__body"/>
-          <path d="M26.0492 23.1745C20.9492 27.1745 14.1492 27.1745 9.04919 23.1745" stroke="#4A222A" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" class="smile__mouth"/>
-          <path d="M12.0492 17.1745C13.1538 17.1745 14.0492 15.6075 14.0492 13.6745C14.0492 11.7415 13.1538 10.1745 12.0492 10.1745C10.9446 10.1745 10.0492 11.7415 10.0492 13.6745C10.0492 15.6075 10.9446 17.1745 12.0492 17.1745Z" fill="#4A222A" class="smile__left-eye"/>
-          <path d="M23.0492 17.1745C24.1538 17.1745 25.0492 15.6075 25.0492 13.6745C25.0492 11.7415 24.1538 10.1745 23.0492 10.1745C21.9446 10.1745 21.0492 11.7415 21.0492 13.6745C21.0492 15.6075 21.9446 17.1745 23.0492 17.1745Z" fill="#4A222A" class="smile__right-eye"/>
-          <defs>
-            <linearGradient id="paint0_linear" x1="28.5492" y1="29.6745" x2="3.04919" y2="1.1745" gradientUnits="userSpaceOnUse">
-              <stop offset="0.230508" stop-color="#FEE103"/>
-              <stop offset="1" stop-color="white"/>
-            </linearGradient>
-          </defs>
-        </svg>
+        <%= image_tag "welcome/footer-logo-icon.png", alt: 'logo' %>
         <div class="brand__pimba js-pimba" style="opacity: 0;">Pimba</div>
       </div>
+      <%= image_tag "welcome/footer-message.png", alt: 'footer message', style: "margin: 60px 0 12px 0" %>
     </section>
   </section>
 
