--- a/web/app/assets/stylesheets/components/me-chip.scss
+++ b/web/app/assets/stylesheets/components/me-chip.scss
@@ -3,8 +3,8 @@
 
 .me-chip {
 
-    &.mdc-chip {
-        font-family: Cabin, Arial;
-    }
+  &.mdc-chip {
+    font-family: $font-secondary-family;
+  }
 
 }
