--- a/web/app/assets/stylesheets/components/me-filter.scss
+++ b/web/app/assets/stylesheets/components/me-filter.scss
@@ -60,7 +60,7 @@
     color: $font-secondary-color;
     background-color: $background-color;
     border: $chip-border-size solid $border-color;
-    border-radius: $media-border-radius;
+    border-radius: $chip-filter-radius;
     font-weight: 400;
     font-size: 10px;
     text-transform: uppercase;
@@ -71,9 +71,9 @@
   }
 
   & .mdc-chip--selected {
-    color: $chip-filter-color;
-    background-color: $chip-filter-background-color;
-    border: $chip-border-size solid $chip-filter-border-color;
+    color: $chip-filter-color-active;
+    background-color: $chip-filter-background-active;
+    border: $chip-border-size solid $chip-filter-border-color-active;
     @include mdc-layout-grid-media-query_("phone") {
       border: unset;
     }
