--- a/web/app/assets/stylesheets/welcome/fcp.scss
+++ b/web/app/assets/stylesheets/welcome/fcp.scss
@@ -2,7 +2,7 @@
 @import "variables";
 
 .template__container {
-  font-family: $font-secondary-font;
+  font-family: $font-secondary-family;
   color: #0C0F09;
   display: flex;
   flex-direction: column;
@@ -66,7 +66,7 @@ section {
   }
 
   & h1 {
-    font-family: $font-primary-font;
+    font-family: $font-primary-family;
     letter-spacing: -0.02em;
     font-weight: 800;
     font-size: 48px;
@@ -81,7 +81,7 @@ section {
   }
 
   & h2 {
-    font-family: $font-secondary-font;
+    font-family: $font-secondary-family;
     font-weight: normal;
     font-size: 22px;
     line-height: 26px;
