--- a/web/app/views/layouts/_app-top-bar.html.erb
+++ b/web/app/views/layouts/_app-top-bar.html.erb
@@ -4,7 +4,7 @@
     <section
       class="me-top-app-bar__section me-top-app-bar__section--left mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
       <a href="/">
-        <%= image_tag 'welcome/logo-letter.png', class: 'me-top-app-bar__logo-text', alt: 'logo' %>
+        <%= image_tag 'logo.png', class: 'me-top-app-bar__logo-text', alt: 'logo' %>
       </a>
     </section>
     <% if mobile_device? && controller == 'events' %>
