Add terms and privacy links

--- a/web/app/assets/stylesheets/welcome/application.scss
+++ b/web/app/assets/stylesheets/welcome/application.scss
@@ -419,6 +419,15 @@
   &__logo-icon {
     position: relative;
   }
+
+  &__links {
+    margin: 60px 0 12px 0;
+    font-size: 12px;
+    font-family: $font-secondary-family;
+    & a {
+      color: $font-tertiary-color;
+    }
+  }
 }
 
 .skatista {
