--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -166,7 +166,11 @@
         <%= image_tag "welcome/footer-logo-icon.png", alt: 'logo' %>
         <div class="brand__pimba js-pimba" style="opacity: 0;">Pimba</div>
       </div>
-      <%= image_tag "welcome/footer-message.png", alt: 'footer message', style: "margin: 60px 0 12px 0" %>
+      <div class="footer__links">
+        <a href="/privacy">Política de privacidade</a>
+        <a href="/terms">Termos de serviço</a>
+      </div>
+      <%= image_tag "welcome/footer-message.png", alt: 'footer message' %>
     </section>
   </section>
 
